# rusty

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.base.json
apps/api/: Cargo.toml  Dockerfile  package.json
apps/api/src/: main.rs
apps/runner/: Cargo.toml  Dockerfile  package.json
apps/runner/src/: main.rs
apps/web/: .env.example  Dockerfile  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  router.tsx
apps/web/src/components/: DefaultCatchBoundary.tsx  LessonWorkbench.tsx  NotFound.tsx
apps/web/src/components/ui/: tooltip.tsx
apps/web/src/routes/: __root.tsx  docs.architecture.tsx  index.tsx  lessons.$lessonSlug.tsx  lessons.index.tsx  lessons.tsx
apps/web/src/styles/: app.css
apps/web/src/utils/: api.ts  env.ts  learner.ts  lsp.ts  progress.ts  useLearnerIdentity.ts  useLessonProgress.ts  useLessons.ts
docs/: architecture.md  curriculum.md  product-plan.md
scripts/: smoke_learning_loop.mjs
